<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="ingsw.group1.findmyphone.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/navigation_home_to_contacts"
            app:destination="@id/contacts_fragment"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/log_fragment"
        android:name="ingsw.group1.findmyphone.fragment.LogFragment"
        android:label="@string/log_name"
        tools:layout="@layout/log_fragment" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="ingsw.group1.findmyphone.fragment.SettingsFragment"
        android:label="@string/settings_name" />

    <fragment
        android:id="@+id/contacts_fragment"
        android:name="ingsw.group1.findmyphone.fragment.ContactListFragment"
        android:label="@string/contacts_tab_name">
        <action
            android:id="@+id/navigation_contacts_to_new"
            app:destination="@id/create_contact_fragment"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/navigation_contacts_to_modify"
            app:destination="@id/modify_contact_fragment"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/create_contact_fragment"
        android:name="ingsw.group1.findmyphone.fragment.CreateContactFragment"
        android:label="@string/title_create_contact" />

    <fragment
        android:id="@+id/modify_contact_fragment"
        android:name="ingsw.group1.findmyphone.fragment.ModifyContactFragment"
        android:label="@string/title_modify_contact" />

    <action
        android:id="@+id/navigation_to_log"
        app:destination="@id/log_fragment"
        app:popUpTo="@id/log_fragment"
        app:popUpToInclusive="true"
        app:popEnterAnim="@anim/fragment_fade_enter"
        app:popExitAnim="@anim/fragment_fade_exit" />

    <action
        android:id="@+id/navigation_to_settings"
        app:destination="@id/settings_fragment"
        app:popUpTo="@id/settings_fragment"
        app:popUpToInclusive="true"
        app:popEnterAnim="@anim/fragment_fade_enter"
        app:popExitAnim="@anim/fragment_fade_exit" />

</navigation>