<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="253dp"
            android:layout_height="60dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#ff008577"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/app_name" />

        <ImageButton
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/round_schedule_24" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/settings_button"
            app:srcCompat="@drawable/round_build_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="bottom|center">

        <ImageButton
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#99AAA5A5"
            android:contentDescription="@string/contacts_button"
            app:srcCompat="@drawable/round_people_alt_24"
            tools:layout_conversion_absoluteHeight="35dp"
            tools:layout_conversion_absoluteWidth="40dp"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="456dp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:autoText="false"
            android:hint="@string/phoneNumber_text"
            android:inputType="phone"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="200dp"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="651dp"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/sendLocationRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#99AAA5A5"
            android:contentDescription="@string/location_request"
            app:srcCompat="@drawable/round_room_24" />

        <ImageButton
            android:id="@+id/sendAlarmRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#99AAA5A5"
            android:contentDescription="@string/alarm_request"
            app:srcCompat="@drawable/round_volume_up_24" />
    </LinearLayout>


</LinearLayout>

