<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_create_contact"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/title_create_contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_contact_name"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/round_person_24"
            android:hint="@string/new_contact_name_hint"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:autofillHints=""
            android:drawableLeft="@drawable/round_phone_24"
            android:hint="@string/new_contact_address_hint"
            android:inputType="phone"
            android:phoneNumber="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/title_create_contact"
            android:src="@drawable/round_person_add_24"
            app:backgroundTint="@color/buttonsGray" />
    </LinearLayout>


</LinearLayout>