<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_modify_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/title_modify_contact"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/title_modify_contact" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/modify_contact_name"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title_modify_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/round_person_24"
        android:hint="@string/new_contact_name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/modify_contact_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/modify_contact_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="false"
        android:drawableStart="@drawable/round_phone_24"
        android:duplicateParentState="false"
        android:hint="@string/new_contact_address_hint" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/modify_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/modify_contact_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/title_modify_contact"
        android:onClick="modifyContact"
        android:src="@drawable/round_save_24"
        app:backgroundTint="@color/buttonsGray" />


</RelativeLayout>